exception management changes
