# services/Logger.API/models/PerformanceLog.js
@@ -1,30 +1,17 @@
-module.exports = {
-    fields: {
-        id: "text",
-        state: "boolean",
-        sessionId: "text",
-        lastModifiedDate: "timestamp",
-        environment: "text",
-        topic: "text",
-        message: "text",
-        stackTrace: "text",
-        startTime: "timestamp",
-        endTime: "timestamp",
-        elapsedMiliSecond: "bigint"
-    },
-    key: [["id"], "lastModifiedDate"],
-    clustering_order: { "lastModifiedDate": "DESC" },
-    materialized_views: {
-        "PerformanceLogsByTopic": {
-            select: ["topic", "lastModifiedDate", "id", "elapsedMiliSecond", "endTime", "environment", "message", "sessionId", "stackTrace", "startTime", "state"],
-            key: [["topic"], "lastModifiedDate", "id"],
-            clustering_order: { "lastModifiedDate": "DESC", "id": "ASC" },
-            filters: {
-                "topic": { $isnt: null },
-                "lastModifiedDate": { $isnt: null },
-                "id": { $isnt: null }
-            }
-        }
-    },
-    table_name: "PerformanceLogs"
-};
+var uuidv1 = require('uuid/v1');
+
+function PerformanceLog() {       // Accept name and age in the constructor
+    this.id = uuidv1();
+    this.state = true;
+    this.sessionId = 'sessionId';
+    this.lastModifiedDate = (new Date());
+    this.environment = 'Logger.API';
+    this.topic = null;
+    this.message = null;
+    this.stackTrace = null;
+    this.startTime = null;
+    this.endTime = null;
+    this.elapsedMiliSecond = null;
+}
+
+module.exports = PerformanceLog;     // Export the Cat function as it is
