# services/Logger.API/routes/performanceLogger.js
@@ -3,6 +3,14 @@ var router = express.Router();
 
 const PerformanceLoggerController = require('../controllers/performanceLogger');
 
-router.get('/:environment', PerformanceLoggerController.getPerformanceLogs);
+router.post('/', PerformanceLoggerController.addPerformanceLog);
+
+router.put('/', PerformanceLoggerController.updatePerformanceLog);
+
+router.delete('/:id', PerformanceLoggerController.deletePerformanceLog);
+
+router.get('/:id', PerformanceLoggerController.getPerformanceLogById);
+
+router.get('/findByTopic/:topic', PerformanceLoggerController.getPerformanceLogByTopic);
 
 module.exports = router;
